--- a/www/less/style.less
+++ b/www/less/style.less
@@ -831,11 +831,30 @@
 								.search__categ {
 									margin: 0 auto;
 									width: 320px;
+									.cycle-slide {
+										margin-right: 0;
+									}
 									.cycle-carousel-wrap {
 										.cycle-slide {
 											width: 80px;
 											margin-right: 0;
 											position: relative;
+											.cat_item {
+												text-align: center;
+												width: auto !important;
+												span {
+													position: static !important;
+													display: block !important;
+													background: none !important;
+													margin-left: 0 !important;
+													width: auto !important;
+													font-size: 14px;
+													color: #808080 !important;
+													&:before {
+														display: none !important;
+													}
+												}
+											}
 										}
 									}
 								}
