--- a/www/less/wlabel.less
+++ b/www/less/wlabel.less
@@ -1,12 +1,15 @@
 .choosed_list_container {
 	z-index: 1100;
 }
+
 .appeal_hiden_content blockquote {
 	float: left;
 }
+
 .appeal_hiden_content blockquote {
 	float: left;
 }
+
 .appeal_hiden_content {
 	display: none;
 	padding-top: 60px;
@@ -15,40 +18,124 @@
 	padding-right: 145px;
 
 }
+
 .appeal_margin {
 	margin-bottom: 0 !important;
 }
+
 .appeal_hiden_content p {
-	font-family: mr,"Myriad Pro",Arial,sans-serif;
+	font-family: mr, "Myriad Pro", Arial, sans-serif;
 	font-size: 16px;
 	margin-bottom: 20px;
 	padding-left: 290px;
 }
+
 .appeal_hiden_content h1 {
-	font-family: mr,"Myriad Pro",Arial,sans-serif !important;
+	font-family: mr, "Myriad Pro", Arial, sans-serif !important;
 	float: left;
 	font-size: 42px;
 	color: #A40050;
 	width: 260px;
 	font-weight: bold;
 }
+
 .appeal_hiden_content .toggle_link {
 	margin-top: 80px !important;
 }
+
 .appeal_hiden_content .toggle_link i {
 	background-position: 40px -892px !important;
 }
+
 .about_progect_margin {
 	margin-top: 57px;
 }
+
 .arrow_rotate i {
 	background-position: 40px -892px !important;
 }
+
 .about_project_content .toggle_link {
 	position: relative;
 	left: 15px;
 }
+
 .about_project .h2 {
 	padding-top: 0;
 	font-family: 'roboto' sans-serif;
+}
+
+.about_project_content .hided_content .purpose h1 {
+	margin-bottom: 10px !important;
+	margin-top: 66px !important;
+}
+
+.about_project_content .hided_content .purpose ul {
+	margin-top: 13px;
+	margin-bottom: 66px;
+}
+
+.about_project_content .hided_content .purpose ul li {
+	margin-bottom: 13px !important;
+}
+
+.about_project_content .hided_content p {
+	margin-bottom: 13px !important;
+}
+
+.about_project_content .hided_content .stages {
+	margin-bottom: 58px;
+}
+
+.about_project_content .hided_content .stages h1 {
+	margin-bottom: 25px !important;
+}
+
+.about_project_content .hided_content .mission {
+	margin-bottom: 59px;
+}
+
+.about_project_content .hided_content .mission p {
+	margin-top: 13px;
+}
+
+.about_project_content .hided_content .valuables h1 {
+	margin-bottom: 19px !important;
+}
+
+.about_project_content .hided_content h2 {
+	font-family: mr, "Myriad Pro", Arial, sans-serif !important;
+}
+
+.about_project_content .hided_content .valuables h2 {
+	margin-bottom: 27px !important;
+}
+
+.about_project_content .hided_content .valuables ul {
+	margin-top: -15px;
+	margin-bottom: 23px;
+}
+
+.about_project_content .hided_content .benefits {
+	margin-top: 58px;
+}
+
+.about_project_content .hided_content .benefits ul {
+	margin-top: -1px;
+}
+
+.about_project_content .hided_content .benefits .first {
+	margin-top: 13px !important;
+	margin-bottom: 27px !important;
+}
+
+.about_project_content .hided_content .wine_brand {
+	margin-top: 57px;
+}
+
+.about_project_content .hided_content .wine_brand p {
+	text-transform: uppercase;
+	color: #3B3B3B;
+	margin-top: 15px;
+	margin-bottom: 0 !important;
 }
